--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: denguedatahub
-Title: What the Package Does (One Line, Title Case)
+Title: A Tidy Format Datasets Of Dengue by Country 
 Version: 0.0.0.9000
 Authors@R: 
     person("Thiyanga S.", "Talagala", , "ttalaga@sjp.ac.lk", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: Provides a weekly, monthly, yearly summary of dengue cases by state/ province/ country.
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
