--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: denguedatahub
 Title: A Tidy Format Datasets Of Dengue by Country 
-Version: 0.0.0.9000
+Version: 1.0.0
 Authors@R: 
     person("Thiyanga S.", "Talagala", , "ttalaga@sjp.ac.lk", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
@@ -9,6 +9,10 @@ License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+Imports: magrittr,
+         rvest,
+         stringr,
+         xml2
 Depends: 
     R (>= 2.10)
 LazyData: true
