--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,19 @@ License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
-Imports: magrittr,
-         rvest,
-         stringr,
-         xml2
+Imports: 
+    magrittr,
+    rvest,
+    stringr,
+    xml2,
+    dplyr,
+    tabulizer,
+    purrr,
+    tibble,
+    tidyr,
+    rlang (>= 0.4.11)
 Depends: 
     R (>= 2.10)
 LazyData: true
+Suggests: 
+    roxygen2
