--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(enquos)
 export(filter_year_wer)
 export(get_addresses)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
