--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,8 @@ Authors@R:
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Provides a weekly, monthly, yearly summary of dengue cases by state/ province/ country.
 License: GPL-3
+URL: https://denguedatahub.netlify.app/
+BugReports: https://github.com/thiyangt/denguedatahub/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
