--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: denguedatahub
-Title: A Tidy Format Datasets Of Dengue by Country 
-Version: 1.0.0
+Title: A Tidy Format Datasets of Dengue by Country 
+Version: 1.0.1
 Authors@R: 
     person("Thiyanga S.", "Talagala", , "ttalagala@sjp.ac.lk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-0656-9789"))
