--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,4 @@ importFrom(rlang,as_label)
 importFrom(rlang,as_name)
 importFrom(rlang,enquo)
 importFrom(rlang,enquos)
+importFrom(tabulizer,extract_tables)
