--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,8 @@ Imports:
     rlang (>= 0.4.11)
 Depends: 
     R (>= 2.10)
+SystemRequirements: Java (>= 7.0)
+Remotes: ropensci/tabulizerjars
 LazyData: true
 Suggests: 
     roxygen2
