updated minmax function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(enquo)
 export(enquos)
 export(filter_year_wer)
 export(get_addresses)
+export(min_max)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,select)
