--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,9 @@ Imports:
 Depends: 
     R (>= 3.5.0)
 SystemRequirements: Java (>= 7.0)
-Remotes: ropensci/tabulizerjars
+Remotes: 
+  ropensci/tabulizerjars,
+  ropensci/tabulizer
 LazyData: true
 Suggests: 
     roxygen2
