--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: denguedatahub
 Title: A Tidy Format Datasets of Dengue by Country 
-Version: 1.0.5
+Version: 2.0.0
 Authors@R: 
     person("Thiyanga S.", "Talagala", , "ttalagala@sjp.ac.lk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-0656-9789"))
@@ -10,12 +10,20 @@ URL: https://denguedatahub.netlify.app/
 BugReports: https://github.com/thiyangt/denguedatahub/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.1
 Imports: 
     dplyr,
+    rvest,
+    stringr,
+    lifecycle,
+    magrittr,
+    here,
+    utils,
+    purrr,
+    xml2,
     rlang (>= 0.4.11)
 Depends: 
-    R (>= 3.5.0)
+    R (>= 4.4.0)
 LazyData: true
 Suggests: 
     roxygen2,
