--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
     dplyr,
+    tibble,
+    tidyr,
     rvest,
     stringr,
     lifecycle,
@@ -24,7 +26,7 @@ Imports:
     tabulapdf,
     rlang (>= 0.4.11)
 Depends: 
-    R (>= 4.4.1)
+    R (>= 4.4.0)
 LazyData: true
 Suggests: 
     roxygen2,
