--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,3 +33,5 @@ SystemRequirements: Java (>= 7.0):
     openjdk-11-jdk (deb),
     java-11-openjdk.x86_64 (rpm),
     openjdk@11 (brew)
+Depends: 
+    R (>= 2.10)
